@@ -69,7 +69,7 @@
 
         <!-- Note: we are disabling auto discovery so we have copied in full the hazelcast-default.xml and set auto discovery to false due to issue on ubuntu with azure even though its disabled -->
 
-        <argLine>-Djdk.attach.allowAttachSelf -Dhazelcast.config=${project.basedir}/src/test/resources/hazelcast-default.xml -Dhazelcast.client.config=${project.basedir}/src/test/resources/hazelcast-client-default.xml -Dhazelcast.security.recommendations -Dhz.jet.enabled=true --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+        <argLine>-Dhazelcast.config=${project.basedir}/src/test/resources/hazelcast-default.xml -Dhazelcast.client.config=${project.basedir}/src/test/resources/hazelcast-client-default.xml -Dhazelcast.security.recommendations -Dhz.jet.enabled=true --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
 
         <!-- Reproducible Builds -->
         <project.build.outputTimestamp>1670038089</project.build.outputTimestamp>
